# pdfsigner

./: .Rbuildignore  .gitignore  404.html  CLAUDE.html  CLAUDE.md  CRAN-SUBMISSION  DESCRIPTION  LICENSE-text.html  NAMESPACE  README.md  _pkgdown.yml  authors.html  authors.md  cran-comments.md  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml
.github/workflows/: pkgdown.yaml
R/: extendr-wrappers.R  sign.R
inst/: AUTHORS
man/: rust_sign_pdf.Rd  rust_verify_pdf.Rd  sign_pdf.Rd  signer-package.Rd  verify_pdf_signature.Rd
reference/: index.html  index.md  pdfsigner-package.html  pdfsigner-package.md  pdfsigner.html  sign_pdf.html  sign_pdf.md  verify_pdf_signature.html  verify_pdf_signature.md
src/: .gitignore  Makevars.in  Makevars.win.in  entrypoint.c
src/rust/: Cargo.toml  document.rs
src/rust/pdf_signer/: Cargo.toml
src/rust/pdf_signer/src/: crypto.rs  dss.rs  incremental.rs  lib.rs  sign.rs  testkit.rs  trust.rs  tsa.rs  verify.rs
src/rust/src/: lib.rs
tests/: testthat.R
tests/testthat/: helper-assets.R
